--- a/SejongTrack/pom.xml
+++ b/SejongTrack/pom.xml
@@ -234,6 +234,12 @@
       <version>3.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.mobile</groupId>
+      <artifactId>spring-mobile-device</artifactId>
+      <version>1.1.4.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
