ENH:security적용 및 단순로그인처리, 사용자 권한 부여

--- a/SejongTrack/pom.xml
+++ b/SejongTrack/pom.xml
@@ -240,6 +240,30 @@
       <version>1.1.4.RELEASE</version>
     </dependency>
 
+    <!--security-->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.0.6.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.0.6.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.0.6.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>5.0.6.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
