--- a/SejongTrack/src/main/webapp/WEB-INF/web.xml
+++ b/SejongTrack/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       /WEB-INF/spring-config/applicationContext.xml
+      /WEB-INF/spring-config/security-context.xml
     </param-value>
   </context-param>
 
@@ -76,4 +77,13 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
