--- a/SejongTrack/src/main/resources/application.properties
+++ b/SejongTrack/src/main/resources/application.properties
@@ -1,25 +1,24 @@
-spring.datasource.url=jdbc:mysql://tracksejong.mysql.database.azure.com:3306/sejongtrack?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://tracksejong.mysql.database.azure.com:3306/sejongtrackjpa?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=sejongTrack@tracksejong
 spring.datasource.password=@Sejong518
 
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 logging.level.org.hibernate=info
 logging.level.org.springframework.web=INFO
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
-mybatis.mapper-locations= classpath:mappers/**/*.xml
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
