--- a/SejongTrack/src/main/resources/application.properties
+++ b/SejongTrack/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.datasource.initialization-mode=always
+
 logging.level.org.hibernate=info
 logging.level.org.springframework.web=INFO
 
