ENH, CLN : trackrule.jsp 리펙토링, rule.js로 분리, mysql local로 변경

--- a/SejongTrack/pom.xml
+++ b/SejongTrack/pom.xml
@@ -119,6 +119,12 @@
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
     </dependency>
+
+    <!-- dev tools -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
