--- a/SejongTrack/src/main/resources/application.properties
+++ b/SejongTrack/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://tracksejong.mysql.database.azure.com:3306/sejongtrackjpa?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost/sejongtrack?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=sejongTrack@tracksejong
-spring.datasource.password=@Sejong518
+spring.datasource.username=root
+spring.datasource.password=1234
 
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.show_sql=true
