--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     </dependency>
 
     <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-taglibs</artifactId>
     </dependency>
@@ -142,7 +147,7 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
     </dependency>
-         
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -174,7 +179,7 @@
           </execution>
         </executions>
       </plugin>
-        
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
