--- a/pom.xml
+++ b/pom.xml
@@ -86,13 +86,6 @@
       <version>5.1.41</version>
     </dependency>
 
-    <!-- MyBatis -->
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-
     <!-- Excel POI xls -->
     <dependency>
       <groupId>org.apache.poi</groupId>
@@ -124,13 +117,6 @@
       <version>1</version>
     </dependency>
 
-    <!-- mobile device -->
-    <dependency>
-      <groupId>org.springframework.mobile</groupId>
-      <artifactId>spring-mobile-device</artifactId>
-      <version>1.1.4.RELEASE</version>
-    </dependency>
-
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
@@ -153,6 +139,18 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.5.0</version>
     </dependency>
   </dependencies>
 
