--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,14 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.5.0</version>
     </dependency>
+
+    <!-- jsoup -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.13.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
