--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
       <version>1.13.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
