--- a/src/main/resources/develop/application-h2.properties
+++ b/src/main/resources/develop/application-h2.properties
@@ -23,8 +23,9 @@ spring.datasource.initialization-mode=always
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+server.tomcat.max-swallow-size=-1
 
 spring.devtools.livereload.enabled=true
 
