--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+
     <!-- Spring Security -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
