ENH : Jenkins용 kill_process.sh 추가, 배포 방식 jar에서 war로 변경

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>kr.ac.sejong</groupId>
   <artifactId>sejongtrack</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <name>sejongtrack</name>
   <description>Sejong Track Management</description>
 
